# datapilot

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
src/datapilot/: main.py
src/datapilot/utils/: __init__.py  embedings.py  emissions.py  metrics.py  missing_values.py  preprocessing.py  zero_variance.py
